--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionExamen/ajouter-examen/ajouter-examen.component.css
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionExamen/ajouter-examen/ajouter-examen.component.css
@@ -16,4 +16,98 @@
   #update-icon {
     cursor: pointer;
   }
+  h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+
+}
+.card {
+  border: 1px solid #ddd; /* Bordure grise */
+  border-radius: 8px; /* Coins arrondis */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
+}
+
+.card-body {
+  padding: 20px; /* Espace intérieur */
+}
+
+.form-label {
+  font-weight: bold; /* Texte en gras */
+}
+
+.form-select {
+  width: 100%; /* Largeur pleine */
+  padding: 8px; /* Remplissage intérieur */
+  border: 1px solid #ccc; /* Bordure grise claire */
+  border-radius: 4px; /* Coins arrondis */
+}
+
+.invalid-feedback {
+  color: #dc3545; /* Couleur rouge pour le message d'erreur */
+  font-size: 14px; /* Taille de police plus petite */
+  margin-top: 4px; /* Marge en haut */
+}
+
+.btn-primary {
+  background-color: #007bff; /* Couleur de fond bleue */
+  border-color: #007bff; /* Bordure bleue */
+  color: #fff; /* Texte blanc */
+  padding: 10px 20px; /* Remplissage intérieur */
+  border-radius: 10px; /* Coins arrondis */
+  cursor: pointer; /* Curseur pointer */
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s; /* Transition douce */
+  width: 100%;
+
+}
+
+.btn-primary:hover {
+  background-color: #0056b3; /* Couleur de fond bleu foncé au survol */
+  border-color: #0056b3; /* Bordure bleu foncé au survol */
+}
+.col-md-8 {
+  width: 70%; /* Largeur de 70% */
+}
+
+.full-calendar {
+  border: 1px solid #ddd; /* Bordure grise */
+  border-radius: 8px; /* Coins arrondis */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
+}
+
+.full-calendar-header {
+  background-color: #007bff; /* Couleur de fond bleue */
+  color: #fff; /* Texte blanc */
+  padding: 10px; /* Remplissage intérieur */
+  border-top-left-radius: 8px; /* Coin arrondi supérieur gauche */
+  border-top-right-radius: 8px; /* Coin arrondi supérieur droit */
+}
+
+.full-calendar-body {
+  padding: 20px; /* Espace intérieur */
+}
+
+.full-calendar-event {
+  background-color: #f0f0f0; /* Couleur de fond gris clair pour les événements */
+  border-radius: 4px; /* Coins arrondis */
+  padding: 5px; /* Remplissage intérieur */
+  margin-bottom: 5px; /* Marge en bas */
+}
+
+.full-calendar-event-title {
+  font-weight: bold; /* Texte en gras */
+  margin-bottom: 5px; /* Marge en bas */
+}
+
+.full-calendar-event-time {
+  font-size: 14px; /* Taille de police */
+  color: #666; /* Couleur de police grise */
+}
+
+.full-calendar-event-description {
+  font-size: 14px; /* Taille de police */
+  color: #333; /* Couleur de police */
+}
+
   
