--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/gestion-homework.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/gestion-homework.component.html
@@ -1,106 +1,75 @@
 <div class="registration-form">
-    <form [formGroup] ="homeworkForm"  (ngSubmit)="AddHomework()">
+    <form [formGroup]="homeworkForm" (ngSubmit)="AddHomework()">
         <div class="form-icon">
-            <img src="assets/img/cour.png">
+            <img src="assets/img/homework.png">
         </div>
+    
         <!-- input sujet -->
-        <div class="form-row">
-            <input 
-            type="text" 
-            formControlName="sujet"  
-            [(ngModel)]="homework.sujet" 
-            placeholder="Sujet"
-            [ngClass]="{'is-invalid': homeworkForm.get('sujet')?.touched && !homeworkForm.get('sujet')?.valid}" 
-            >
-            <div class="invalid-feedback">
-                <span *ngIf="homeworkForm.get('sujet')?.errors?.['required']">Nom du sujet est Obligatoire</span>
+        <div class="form-row mb-3">
+            <input type="text" formControlName="sujet" placeholder="Sujet"
+                   class="form-control"
+                   [ngClass]="{'is-invalid': homeworkForm.get('sujet')?.touched && !homeworkForm.get('sujet')?.valid}">
+            <div class="invalid-feedback alert alert-danger">
+                <span *ngIf="homeworkForm.get('sujet')?.errors?.['required']">Nom du sujet est obligatoire</span>
             </div>
         </div>
+    
         <!-- list nom matiere -->
-        <div class="form-row">
-            <select formControlName="matiereHomework" [(ngModel)]="homework.matiereHomework" class="form-select" id="validationCustom04" name="idMatiere" placeholder="Nom Matiere"  required>
-              <option value="">....Select...</option>
-              <option *ngFor="let matiere of matieres" [value]="matiere.nom">{{ matiere.nom }}</option>
+        <div class="form-row mb-3">
+            <select formControlName="matiereHomework" class="form-select" required>
+                <option value="">Sélectionner une matière</option>
+                <option *ngFor="let matiere of matieres" [value]="matiere.nom">{{ matiere.nom }}</option>
             </select>
-            <div *ngIf="submitted && homeworkForm.get('matiere')?.errors?.['required']" class="invalid-feedback">
-              <div>Nom de Matiere est Obligatoire</div>
+            <div *ngIf="submitted && homeworkForm.get('matiereHomework')?.errors?.['required']" class="invalid-feedback alert alert-danger">
+                <div>Nom de la matière est obligatoire</div>
             </div>
         </div>
-        <!-- importation fichier -->
-       
-        <!-- date remise -->  
-        <div class="form-row">
-            <div class="col-md-12" >
-                <input 
-                formControlName="dateRemise" 
-                type="date"  
-                [(ngModel)]="homework.dateRemise" 
-                placeholder="Date de Remise" 
-                [ngClass]="{'is-invalid':homeworkForm.get('dateRemise')?.touched && !homeworkForm.get('dateRemise')?.valid}"
-                > 
-            </div>
-            <div class="invalid-feedback">
-                <span *ngIf="homeworkForm.get('dateRemise')?.errors?.['required']">Date de remise est Obligatoire</span>
+    
+        <!-- date remise -->
+        <div class="form-row mb-3">
+            <input formControlName="dateRemise" type="date" placeholder="Date de Remise"
+                   class="form-control"
+                   [ngClass]="{'is-invalid': homeworkForm.get('dateRemise')?.touched && !homeworkForm.get('dateRemise')?.valid}">
+            <div class="invalid-feedback alert alert-danger">
+                <span *ngIf="homeworkForm.get('dateRemise')?.errors?.['required']">Date de remise est obligatoire</span>
             </div>
         </div>
-
-        <!-- date recu --> 
-        <div class="form-row">
-            <div class="col-md-12" >
-                    <input 
-                    formControlName="dateRecu" 
-                    type="date" 
-                    [(ngModel)]="homework.dateRecu" 
-                    placeholder="Date de Réception" 
-                    [ngClass]="{'is-invalid':homeworkForm.get('dateRecu')?.touched && !homeworkForm.get('dateRecu')?.valid}"
-
-                    >
-            </div>
-            <div class="invalid-feedback">
-                <span *ngIf="homeworkForm.get('dateRecu')?.errors?.['required']">Date de reçu est Obligatoire</span>
+    
+        <!-- date recu -->
+        <div class="form-row mb-3">
+            <input formControlName="dateRecu" type="date" placeholder="Date de Réception"
+                   class="form-control"
+                   [ngClass]="{'is-invalid': homeworkForm.get('dateRecu')?.touched && !homeworkForm.get('dateRecu')?.valid}">
+            <div class="invalid-feedback alert alert-danger">
+                <span *ngIf="homeworkForm.get('dateRecu')?.errors?.['required']">Date de réception est obligatoire</span>
             </div>
         </div>
-          
-        <div class="form-row">
-            <div class="col-md-12">
-                <select formControlName="classe" 
-                [(ngModel)]="homework.classeHomework" 
-                class="form-select" id="validationCustom04" 
-                placeholder="Nom Matiere" 
-                [ngClass]="{'is-invalid':homeworkForm.get('classe')?.touched && !homeworkForm.get('classe')?.valid}"
-
-                >
-                    <option value="">....Select...</option>
-                    <option *ngFor="let classe of classes" [value]="classe.nom">{{ classe.nom }}</option>
-                </select>
-                  
-                <div class="invalid-feedback">
-                    <span *ngIf="homeworkForm.get('classe')?.errors?.['required']">Selectionné le classe </span>
-                </div>
-               
+    
+        <!-- select classeHomework -->
+        <div class="form-row mb-3">
+            <select formControlName="classeHomework" class="form-select" required>
+                <option value="">Sélectionner une classe</option>
+                <option *ngFor="let classe of classes" [value]="classe.nom">{{ classe.nom }}</option>
+            </select>
+            <div class="invalid-feedback alert alert-danger">
+                <span *ngIf="homeworkForm.get('classeHomework')?.errors?.['required']">Sélectionner la classe</span>
             </div>
         </div>
-        <label class="form-group">
-            <textarea 
-            name="" 
-            id="" 
-            placeholder="Detail " 
-            required="required" 
-            [(ngModel)]="homework.description" 
-            formControlName="description"
-            [ngClass]="{'is-invalid':homeworkForm.get('description')?.touched && !homeworkForm.get('description')?.valid}"
-
-                 ></textarea>
-           
-            <div class="invalid-feedback">
-                <span *ngIf="homeworkForm.get('description')?.errors?.['required']">Expliqué le sujet  </span>
+    
+        <!-- description -->
+        <div class="form-group mb-3">
+            <textarea formControlName="description" placeholder="Détail"
+                      class="form-control"
+                      [ngClass]="{'is-invalid': homeworkForm.get('description')?.touched && !homeworkForm.get('description')?.valid}"></textarea>
+            <div class="invalid-feedback alert alert-danger">
+                <span *ngIf="homeworkForm.get('description')?.errors?.['required']">Expliquer le sujet</span>
             </div>
-        </label>
-
+        </div>
+    
+        <!-- button -->
         <div class="form-group">
-            <button type="submit" class="btn btn-block create-account" >Ajouter Homework</button>
-            <!--  -->
+            <button type="submit" class="btn btn-primary btn-block">Ajouter Homework</button>
         </div>
     </form>
-
+    
 </div>
