--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/update-homework/update-homework.component.css
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/update-homework/update-homework.component.css
@@ -22,13 +22,14 @@ body{
     border-radius: 50%;
     font-size: 40px;
     color: white;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     margin: auto;
-    margin-bottom: 50px;
     line-height: 100px;
 }
-
+input, textarea{
+    width: 100%;
+}
 .registration-form .item{
 	border-radius: 20px;
     margin-bottom: 25px;
