--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionResultat/liste-resultat/liste-resultat.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionResultat/liste-resultat/liste-resultat.component.html
@@ -1,39 +1,28 @@
 <mat-card>
-    <mat-card-header>
-      <div class="d-flex align-items-center justify-content-between">
-       
-        <div class="d-flex align-items-center mb-2">
-          
-            <select [(ngModel)]="note.matiereNote"  class="form-select" (change)="onSubjectChange($event.target)" name="idMatiere" placeholder="Nom Matiere"  required>
-              <option value="">....Select...</option>
-              <option *ngFor="let matiere of matieres" [value]="matiere.nom">{{ matiere.nom }}</option>
-            </select>
-          
-            <select [(ngModel)]="note.classe" 
-              (change)="onClassChange($event.target)"
-                class="form-select" 
-                placeholder="Nom Classe" 
-                >
-                    <option [value]="">....Select...</option>
-                    <option *ngFor="let classe of classes" [value]="classe.id">{{ classe.nom }}</option>
-            </select>
-          
-        
-          
-        </div>
-        
-      </div>
-      <div class="">
-        <button mat-raised-button class="btn btn-primary" type="button" (click)="ajouterNote()">Ajouter Note</button>
-      </div>
-    
-    </mat-card-header>
+ 
+  <mat-card-header class="d-flex justify-content-between align-items-center">
+   
+    <div class="d-flex align-items-center justify-content-center flex-grow-1">
+      <select  class="form-select me-2" (change)="onSubjectChange($event.target)" name="idMatiere" placeholder="Nom Matiere" required>
+        <option value="" selected>Sélectionner une matière</option>
+        <option *ngFor="let matiere of matieres" [value]="matiere.nom">{{ matiere.nom }}</option>
+      </select>
+      <select (change)="onClassChange($event.target)" class="form-select" placeholder="Nom Classe">
+        <option value=""  selected>Sélectionner une classe</option>
+        <option *ngFor="let classe of classes" [value]="classe.id">{{ classe.nom }}</option>
+      </select>
+    </div>
+    <div>
+      <button mat-raised-button class="btn btn-primary" type="button" (click)="ajouterNote()">Ajouter Note</button>
+    </div>
+  </mat-card-header>
+  
     <mat-card-content>
       <table matSort mat-table [dataSource]="items" class="mat-elevation-z8">
   
           <ng-container matColumnDef="Eleve">
             <th mat-sort-header mat-header-cell *matHeaderCellDef> Eleve</th>
-            <td mat-cell *matCellDef="let element">{{element.eleve.id}}</td>
+            <td mat-cell *matCellDef="let element">{{element.eleve.nom}}</td>
           </ng-container>
          
             <ng-container matColumnDef="NoteOrale">
@@ -50,9 +39,9 @@
               <th mat-header-cell mat-sort-header *matHeaderCellDef> Action</th>
               <td mat-cell *matCellDef="let element">
                   <i (click)="editNote(element.id)" class='fas fa-edit'></i>
-                  <i (click)="deleteNote(element.id)" class='fas fa-trash-alt'></i>
                   <i (click)="detailNote(element.id)"  class='fas fa-eye'></i>
-                
+                  <i (click)="deleteNote(element.id)" class='fas fa-trash-alt'></i>
+
               </td>
             </ng-container>
   
